<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.profile.CompanyProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/titleProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_profile"
                android:textAlignment="center"
                android:textColor="@color/text"
                android:textSize="25sp"
                android:fontFamily="@font/poppins"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/editIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_edit"
                android:layout_marginRight="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleProfile" />

            <TextView
                android:id="@+id/hintEmailTextviewCompanyProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/hint_email_profile"
                android:textAlignment="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/text_hint"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleProfile" />

            <TextView
                android:id="@+id/emailTextviewCompanyProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_profile"
                android:textColor="@color/text"
                android:textSize="20sp"
                android:fontFamily="@font/poppins"
                app:layout_constraintStart_toStartOf="@+id/hintEmailTextviewCompanyProfile"
                app:layout_constraintTop_toBottomOf="@+id/hintEmailTextviewCompanyProfile" />

            <TextView
                android:id="@+id/hintINNTextviewCompanyProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/hint_INN_profile"
                android:textColor="@color/text_hint"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="@+id/emailTextviewCompanyProfile"
                app:layout_constraintTop_toBottomOf="@+id/emailTextviewCompanyProfile" />


            <TextView
                android:id="@+id/INNTextviewCompanyProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/INN_profile"
                android:textColor="@color/text"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/hintINNTextviewCompanyProfile"
                app:layout_constraintTop_toBottomOf="@+id/hintINNTextviewCompanyProfile" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </ScrollView>


</androidx.appcompat.widget.LinearLayoutCompat>