<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.login.LoginFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/titleTextviewInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_input"
                android:textSize="26sp"
                android:layout_marginTop="40dp"
                android:textColor="@color/orange"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iconInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_input"
                android:layout_marginTop="25dp"
                app:layout_constraintEnd_toEndOf="@+id/titleTextviewInput"
                app:layout_constraintStart_toStartOf="@+id/titleTextviewInput"
                app:layout_constraintTop_toBottomOf="@+id/titleTextviewInput" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailLayoutInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                app:boxBackgroundColor="@color/text_input"
                android:textColorHint="@color/text_hint"
                app:boxStrokeColor="@color/text_hint"
                app:hintTextColor="@color/text_hint"
                app:layout_constraintEnd_toEndOf="@+id/iconInput"
                app:layout_constraintStart_toStartOf="@+id/iconInput"
                app:layout_constraintTop_toBottomOf="@+id/iconInput">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEditTextInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:textSize="16sp"
                    android:minHeight="48dp"
                    android:paddingStart="33dp"
                    android:paddingEnd="33dp"
                    android:textColorLink="@android:color/transparent"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordLayoutInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:boxBackgroundColor="@color/text_input"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/text_hint"
                app:boxStrokeColor="@color/text_hint"
                app:hintTextColor="@color/text_hint"
                app:layout_constraintEnd_toEndOf="@+id/emailLayoutInput"
                app:layout_constraintStart_toStartOf="@+id/emailLayoutInput"
                app:layout_constraintTop_toBottomOf="@+id/emailLayoutInput">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordEditTextInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:textSize="16sp"
                    android:minHeight="48dp"
                    android:paddingStart="33dp"
                    android:paddingEnd="33dp"
                    android:inputType="textPassword"
                    android:textColor="@color/text_hint"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/hintForgotTextInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_forgot_password"
                android:textColor="@color/orange"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="@+id/passwordLayoutInput"
                app:layout_constraintTop_toBottomOf="@+id/passwordLayoutInput" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/inputButtonInput"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/input_button"
                android:textColorHint="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:backgroundTint="@color/orange"
                app:cornerRadius="20dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                app:layout_constraintEnd_toEndOf="@+id/passwordLayoutInput"
                app:layout_constraintStart_toStartOf="@+id/passwordLayoutInput"
                app:layout_constraintTop_toBottomOf="@+id/passwordLayoutInput" />

            <TextView
                android:id="@+id/hintTextInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_input"
                android:textColor="@color/text"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="25dp"
                app:layout_constraintStart_toStartOf="@+id/inputButtonInput"
                app:layout_constraintTop_toBottomOf="@+id/inputButtonInput" />

            <TextView
                android:id="@+id/hintRegTextInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_input_registration"
                android:textColor="@color/orange"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="8dp"
                app:layout_constraintStart_toEndOf="@+id/hintTextInput"
                app:layout_constraintTop_toBottomOf="@+id/inputButtonInput" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                app:layout_constraintEnd_toEndOf="@+id/hintRegTextInput"
                app:layout_constraintStart_toStartOf="@+id/hintTextInput"
                app:layout_constraintTop_toBottomOf="@+id/inputButtonInput" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>